--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -3,5 +3,12 @@
     "todosTitle": "Todos",
     "rootTitle": "Root",
     "somethingWrong": "Error occured",
-    "laucherError": "Could not launch {}"
+    "laucherError": "Could not launch {}",
+    "secureWallet" :"Secure wallet",
+    "confirmSecretRecoveryPhrase" : "Confirm Secret Recovery Phrase",
+    "getSetGo" :"Get, Set, Go!",
+    "thisIsYourSecretRecoveryPhrase" : "This is your Secret Recovery Phrase. Write it down on a piece of paper and store in a safe place. You’ll be asked to re-enterthis phrase (in order) in the next step",
+    "createWallet" : "Create wallet",
+    "lastStep" : "Last step! Please select each phrase in order to make sure it is correct.",
+    "continueText" : "Continue"
  }
