add new notifications page and cubit, switch button and config dialog

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -28,5 +28,6 @@
     "start":"Start",
     "done":"Done",
     "congretulations":"Congretutations!",
-    "congretulationsContentText":"You’ve successfully protected your wallet. Remember to keep your Secret Recovery Phrase safe, it’s your responsibility!"
+    "congretulationsContentText":"You’ve successfully protected your wallet. Remember to keep your Secret Recovery Phrase safe, it’s your responsibility!",
+    "notifiCations":"Notifications"
 }
