change auth folder name, create detail page

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -37,5 +37,6 @@
     "logout":"logout",
     "pushNotification":"Push notification",
     "myQrCode":"My QR Code",
-    "myAccount":"My Account"
+    "myAccount":"My Account",
+    "noName":"No Name"
 }
