Clean up code and handle error

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,46 +1,63 @@
 {
-    "jsonPlaceHolder": "JSON place holder",
-    "todosTitle": "Todos",
-    "rootTitle": "Root",
-    "somethingWrong": "Error occured",
-    "extensionNotSupport": "The app can read this file, will be support as soon as posible!",
-    "laucherError": "Could not launch {}",
-    "secureWallet" :"Secure wallet",
-    "confirmSecretRecoveryPhrase" : "Confirm Secret Recovery Phrase",
-    "getSetGo" :"Get, Set, Go!",
-    "thisIsYourSecretRecoveryPhrase" : "This is your Secret Recovery Phrase. Write it down on a piece of paper and store in a safe place. You’ll be asked to re-enterthis phrase (in order) in the next step",
-    "createWallet" : "Create wallet",
-    "lastStep" : "Last step! Please select each phrase in order to make sure it is correct.",
-    "continueText" : "Continue",
-    "titleCloudmet":"Cloudmet",
-    "welcomeToCloudmet":"Welcome to Cloudmet",
-    "welcomeContent":"Cloudmet helps you connect to the decenterlized web wherever you go. Get started today, easy to send files to family, friends, and co-workers by import your existing wallet or create a new one!",
-    "importWallet":"Import wallet",
-    "createYourWallet":"Create your wallet",
-    "import":"Import",
-    "rememberMe":"Remember me",
-    "enterYourSecretRecoveryPhraseHere":"Enter your Secret Recovery Phrase here!",
-    "recoveryPhrase":"Recovery Phrase",
-    "importYourWalletWithSecret":"Import your wallet with Secret",
-    "secureYourWalletListText1":"Write down your Secret Recovery Phrase on a piece of paper and store in a safe place",
-    "secureYourWalletListText2":"Make sure no one is watching your screen",
-    "iGotIt":"I go it!",
-    "start":"Start",
-    "done":"Done",
-    "congretulations":"Congretutations!",
-    "congretulationsContentText":"You’ve successfully protected your wallet. Remember to keep your Secret Recovery Phrase safe, it’s your responsibility!",
-    "notifiCations":"Notifications",
+    "secureWallet": "Secure wallet",
+    "confirmSecretRecoveryPhrase": "Confirm Secret Recovery Phrase",
+    "getSetGo": "Get, Set, Go!",
+    "thisIsYourSecretRecoveryPhrase": "This is your Secret Recovery Phrase. Write it down on a piece of paper and store in a safe place. You’ll be asked to re-enterthis phrase (in order) in the next step",
+    "createWallet": "Create wallet",
+    "lastStep": "Last step! Please select each phrase in order to make sure it is correct.",
+    "continueText": "Continue",
+    "titleCloudmet": "Cloudmet",
+    "welcomeToCloudmet": "Welcome to Cloudmet",
+    "welcomeContent": "Cloudmet helps you connect to the decenterlized web wherever you go. Get started today, easy to send files to family, friends, and co-workers by import your existing wallet or create a new one!",
+    "importWallet": "Import wallet",
+    "createYourWallet": "Create your wallet",
+    "import": "Import",
+    "rememberMe": "Remember me",
+    "enterYourSecretRecoveryPhraseHere": "Enter your Secret Recovery Phrase here!",
+    "recoveryPhrase": "Recovery Phrase",
+    "importYourWalletWithSecret": "Import your wallet with Secret",
+    "secureYourWalletListText1": "Write down your Secret Recovery Phrase on a piece of paper and store in a safe place",
+    "secureYourWalletListText2": "Make sure no one is watching your screen",
+    "iGotIt": "I go it!",
+    "start": "Start",
+    "done": "Done",
+    "congretulations": "Congretutations!",
+    "congretulationsContentText": "You’ve successfully protected your wallet. Remember to keep your Secret Recovery Phrase safe, it’s your responsibility!",
+    "notifiCations": "Notifications",
     "send": "Send",
     "cancel": "Cancel",
-    "save":"save",
-    "showThisToYourFriends":"Show this to your friends!",
-    "logout":"logout",
-    "pushNotification":"Push notification",
-    "myQrCode":"My QR Code",
-    "myAccount":"My Account",
-    "noName":"No Name",
-    "searchYourFiles" : "Search your files",
-    "myCloundmet" : "My Cloundmet",
-    "screenshot" : "Screen Shot",
-    "modified" : "Modified"
+    "save": "save",
+    "showThisToYourFriends": "Show this to your friends!",
+    "logout": "Logout",
+    "pushNotification": "Push notification",
+    "myQrCode": "My QR Code",
+    "myAccount": "My Account",
+    "noName": "No Name",
+    "searchYourFiles": "Search your files",
+    "myCloundmet": "My Cloundmet",
+    "screenshot": "Screen Shot",
+    "modified": "Modified",
+    "errorMessages": {
+        "showErrorMessage": "Error: {}",
+        "saveCredential": "Something wrong with saving your credential",
+        "saveIpfsCredential": "Something wrong with saving your IPFS credential",
+        "somethingWrong": "Error occured",
+        "getCredentialFromPrivatekey": "Please recheck your wallet private key",
+        "getCredential": "Please recheck your mnemonic...",
+        "generateMnemonic": "Cannot generate mnemonic, please try again...",
+        "previewInvalid": "The public destination is invalid",
+        "previewError": "Something wrong with preview your current file",
+        "readWallet": "Your wallet is invalid format, please try to re-login again.",
+        "readIpfs": "Your IPFS key is invalid format, please try to re-login again.",
+        "decryptFile": "Your file is invalid",
+        "encryptFile": "Something wrong with encrypt file process",
+        "pickFile": "Cannot get files, please try again...",
+        "saveFirebase": "Cannot save your notification token, it will be effected to your push notification feature",
+        "getAlerts": "Cannot get alerts, please try again...",
+        "initializeFirebase": "Something wrong with initialize push notification, please restart the app...",
+        "saveImages": "Try to upload again...",
+        "getRecent": "Cannot get your recent, please try again...",
+        "getImagesFromLink": "Something wrong with your link...",
+        "getQrCode": "QrCode is invalid data"
+    }
 }
