fixed text over flow

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -13,9 +13,9 @@
     "createYourWallet": "Create your wallet",
     "import": "Import",
     "rememberMe": "Remember me",
-    "enterYourSecretRecoveryPhraseHere": "Enter your Secret Recovery Phrase here!",
+    "enterYourPriveteKeyHere": "Enter your private key here!",
     "recoveryPhrase": "Recovery Phrase",
-    "importYourWalletWithSecret": "Import your wallet with Secret",
+    "importYourWalletWithSecret": "Import your wallet from private key",
     "secureYourWalletListText1": "Write down your Secret Recovery Phrase on a piece of paper and store in a safe place",
     "secureYourWalletListText2": "Make sure no one is watching your screen",
     "iGotIt": "I go it!",
